--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,11 @@ dependencies {
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 }
 
+// -parameters 플래그 : 컴파일러가 메서드의 파라미터 이름 정보를 클래스 파일에 저장
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '-parameters'
+}
+
 tasks.named('test') {
     useJUnitPlatform()
 }
