--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,11 @@ dependencies {
     // Thymleaf
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+
+    // Spring Security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+
 }
 
 // -parameters 플래그 : 컴파일러가 메서드의 파라미터 이름 정보를 클래스 파일에 저장
